# hamoni

./: .gitignore  README.md  package-lock.json  package.json  tsconfig.json
public/wasm/: burg_lpc.d.ts  burg_lpc.js  burg_lpc_bg.wasm  burg_lpc_bg.wasm.d.ts
public/worklets/: formant-processor.js  pitch-collector.js
python-server/: main.py  requirements.txt
python-server/analyzers/: advanced_features.py  basic_features.py  composite_indices.py  failure_patterns.py  quality_gate.py
python-server/tests/: conftest.py  test_advanced_features.py  test_api.py  test_basic_features.py  test_composite_indices.py  test_failure_patterns.py  test_quality_gate.py
python-server/utils/: audio.py  normalize.py
src/__tests__/: music-utils.test.ts  prescription-engine.test.ts  range-metrics.test.ts  scale-generator.test.ts  vocal-range.test.ts  voice-profile.test.ts  vowel-targets.test.ts
src/i18n/: index.ts  types.ts
src/lib/: design-tokens.ts
src/lib/audio/: music-utils.ts
src/lib/ear-training/: daily-tracker.ts  quiz-engine.ts  types.ts
src/lib/pitch/: bezier-interpolation.ts  feedback-engine.ts  intended-note-filter.ts  meyda-analyzer.ts  note-utils.ts  pitch-detector.ts  pitch-engine.ts  pitch-smoother.ts  types.ts  vocal-analyzer.ts
src/lib/rhythm-training/: daily-tracker.ts  metronome.ts  onset-detector.ts  patterns.ts  scorer.ts  types.ts
src/lib/scoring/: coaching-feedback.ts  longtone-scoring.ts  scoring-engine.ts
src/types/: meyda.d.ts
wasm/burg-lpc/: Cargo.toml
wasm/burg-lpc/src/: burg.rs  formant.rs  lib.rs  resample.rs  window.rs
(+120 files in other folders)
